--- a/mudrunner.html
+++ b/mudrunner.html
@@ -24,8 +24,8 @@
         <section>
           <h3>to play the game </h3>
           <h3>login using below data</h3>
-          <h1>ID: tiwarisujal41@gmail.com  </h1>
-          <p>PASSWORD : 8828259218s</p>
+          <h1>ID: dev </h1>
+          <p>PASSWORD : 87654321 </p>
           <a href="games.html" class="btnone">other games</a>
           <a href="https://portal.reemo.io/computers" class="btntwo">games</a>
       </section>
